--- a/public/css/addplants.css
+++ b/public/css/addplants.css
@@ -20,6 +20,7 @@ h2 {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-weight: bolder;
   color: #556B2F;
+  
 }
 
 /* Class selectors */
@@ -102,11 +103,12 @@ h2 {
 
 .flex-col-1 {
   align-items: center;
-  align-self: flex-end;
+  /* align-self: flex-end; */
   display: flex;
   flex-direction: column;
   min-height: 770px;
   width: 344px;
+  justify-content: space-between;
 }
 
 .flex-row {
@@ -115,6 +117,7 @@ h2 {
   gap: 24px;
   height: 781px;
   min-width: 784px;
+  justify-content: space-between;
 }
 
 .flex-row-1 {
@@ -140,6 +143,7 @@ h2 {
 }
 
 .logo {
+  padding-top: 50px;
   max-width: 100%;
   height: auto;
   border-radius: 50%;
